--- a/sakuragaoka.html
+++ b/sakuragaoka.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<title>PASEOS POR YOKOSUKA</title>
-	<html>
-	<head>
-	</head>
+<!Doctype html>
+<html lang="es" dir="ltr">
+
+<head>
+    <title>PASEOS POR YOKOSUKA</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="JAPÓN">
+    <meta name="author" content="Juan Carlos Mendoza Fontcuberta">
 	<body>
 
 
@@ -49,9 +52,11 @@
 			<a href="dobuitayokosuka/20191224/sakuragaoka/107.jpg"><img src="dobuitayokosuka/20191224/sakuragaoka/107.jpg" width="200" height="200"alt="YOKOSUKA" ></a>
 			<a href="dobuitayokosuka/20191224/sakuragaoka/108.jpg"><img src="dobuitayokosuka/20191224/sakuragaoka/108.jpg" width="200" height="200"alt="YOKOSUKA" ></a>
 			<a href="dobuitayokosuka/20191224/sakuragaoka/109.mp4"><video src="dobuitayokosuka/20191224/sakuragaoka/109.mp4" width="200" height="200"alt="YOKOSUKA" ></a>
-			<a href="dobuitayokosuka/20191224/sakuragaoka/110.mp4"><video src="dobuitayokosuka/20191224/sakuragaoka/110.mp4" width="200" height="200"alt="YOKOSUKA" ></a>
+			<!--<a href="dobuitayokosuka/20191224/sakuragaoka/110.mp4"><video src="dobuitayokosuka/20191224/sakuragaoka/110.mp4" width="200" height="200"alt="YOKOSUKA" ></a>-->
+			<li><a href="https://youtu.be/spne3mlHims"><img src="youtube.png" alt="imagen" width="20%"></a></li>
 			<a href="dobuitayokosuka/20191224/sakuragaoka/111.jpg"><img src="dobuitayokosuka/20191224/sakuragaoka/111.jpg" width="200" height="200"alt="YOKOSUKA" ></a>
-			<a href="dobuitayokosuka/20191224/sakuragaoka/112.mp4"><video src="dobuitayokosuka/20191224/sakuragaoka/112.mp4" width="200" height="200"alt="YOKOSUKA" ></a>
+			<!--<a href="dobuitayokosuka/20191224/sakuragaoka/112.mp4"><video src="dobuitayokosuka/20191224/sakuragaoka/112.mp4" width="200" height="200"alt="YOKOSUKA" ></a>-->
+			<li><a href="https://youtu.be/e5KhNu4ETh4"><img src="youtube.png" alt="imagen" width="20%"></a></li>
 			<a href="dobuitayokosuka/20191224/sakuragaoka/113.jpg"><img src="dobuitayokosuka/20191224/sakuragaoka/113.jpg" width="200" height="200"alt="YOKOSUKA" ></a>
 			<a href="dobuitayokosuka/20191224/sakuragaoka/114.jpg"><img src="dobuitayokosuka/20191224/sakuragaoka/114.jpg" width="200" height="200"alt="YOKOSUKA" ></a>
 			<a href="dobuitayokosuka/20191224/sakuragaoka/115.jpg"><img src="dobuitayokosuka/20191224/sakuragaoka/115.jpg" width="200" height="200"alt="YOKOSUKA" ></a>
