--- a/harbor.html
+++ b/harbor.html
@@ -1,6 +1,12 @@
-<html>
-	<head>
-	</head>
+<!Doctype html>
+<html lang="es" dir="ltr">
+
+<head>
+    <title>PUERTO</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="JAPÓN">
+    <meta name="author" content="Juan Carlos Mendoza Fontcuberta">
 	<body>
 
 
