--- a/dobuita.html
+++ b/dobuita.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<title>PASEOS POR YOKOSUKA</title>
-	<html>
-	<head>
-	</head>
+<!Doctype html>
+<html lang="es" dir="ltr">
+
+<head>
+    <title>DOBUITA</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="JAPÓN">
+    <meta name="author" content="Juan Carlos Mendoza Fontcuberta">
 	<body>
 
 
@@ -66,25 +69,9 @@
 
 <br>
 
-Elemento 1</li>
-<ul><li>Elemento 1.1</li>
-<li>Elemento 1.2</li>
-<ul><li>Elemento 1.2.1</li><a href="http://www.yahoo.es"> click </a>
-<li>Elemento 1.2.2</li><a href="http://www.boladedragon.com"> click </a>
-<li>Elemento 1.2.3</li><a href="https://shenmuedojo.com/"> click </a></ul>
-<li>Elemento 2.3.2</li>
 
-<br>
-<li>Elemento 1.3</li>
-<li>Elemento 1.4</li>
-<li>Elemento 1.5</li></ul>
-<li>Elemento 2</li>
-<ul><li>Elemento 2.1</li>
-<li>Elemento 2.2</li>
-<li>Elemento 2.3</li>
-<li>Elemento 2.3.17</li>
-<li>Elemento 2.3.2</li></ul>
-<li>Elemento 3</li></ol>
+<li>Elemento 1.2.3</li><a href="https://shenmuedojo.com/"> click </a></ul>
+
 <p>
 
 <br>
