--- a/llegada_a_Yokosuka.html
+++ b/llegada_a_Yokosuka.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<title>LLEGADA A YOKOSUKA</title>
-	<html>
-	<head>
-	</head>
+<!Doctype html>
+<html lang="es" dir="ltr">
+
+<head>
+    <title>LLEGADA A YOKOSUKA</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="JAPÓN">
+    <meta name="author" content="Juan Carlos Mendoza Fontcuberta">
 	<body>
 
 
