--- a/dobuita.html
+++ b/dobuita.html
@@ -68,9 +68,7 @@
 		
 
 <br>
-
-
-<li>Elemento 1.2.3</li><a href="https://shenmuedojo.com/"> click </a></ul>
+<a href="https://shenmuedojo.com/"> SHENMUEDOJO.COM </a></ul>
 
 <p>
 
